--- a/level-1/index.html
+++ b/level-1/index.html
@@ -7,13 +7,7 @@
     <link rel="stylesheet" href="../base/base.css">
 
     <!-- STEP 1 CSS FILE **** STEP 1 CSS FILE *** STEP 1 CSS FILE -->
-    <link rel="stylesheet" href="step-1/step-1.css">
-
-    <!-- STEP 2 CSS FILE **** STEP 2 CSS FILE *** STEP 2 CSS FILE -->
-    <link rel="stylesheet" href="step-2/step-2.css">
-
-    <!-- STEP 3 CSS FILE **** STEP 3 CSS FILE *** STEP 3 CSS FILE -->
-    <link rel="stylesheet" href="step-3/step-3.css">
+    <link rel="stylesheet" href="./main.css">
 
 </head>
 <body>
@@ -54,6 +48,7 @@
                 <!-- Step-3.2 add styles to match the step-3 design. This is the content section  -->
                 <div class="content">
                     <!-- Step-3.3 add some content  -->
+                    <p>Blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
 
                 </div>
 
